# clarity-ai

./: README.md  pyproject.toml
src/clarity_ai/: cli.py  ollama_reviewer.py
src/clarity_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
